# TwInsPEctor

./: 00_twinpe_8cat.py  02_final_classify_reads_7cat_compound.ipynb  04_twinpe_8cat_compound_crispresso.py  LICENSE  README.md  meta.yaml  pyproject.toml  run.sh
TwInsPEctor/: TwInsPEctor.py
demo/: demo.md  demo.sh
twin_prime_editing/: twin_prime_editing.py
