[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TwInsPEctor"
version = "0.1.0"
description = "TwInsPEctor: a tool for analyzing twin prime editing experiments, including data processing and visualization."
authors = [
    { name="Nate Masson" },
    { name="Kendell Clement" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "crispresso2",
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/clementlab/TwInsPEctor"

[project.scripts]
TwInsPEctor = "TwInsPEctor.TwInsPEctor:main"